Fix token styling on horizontal cards + more than 3 tokens. (#157)
* Update styling of tokens on horizontal cards.

Previously, the tokens on horizontal cards were being displayed
vertically, leading to them being cut off if there were more than 2 of
them. This flips the orientation for to be horizontal which accomodates
3 tokens.

Additionally, if there are more than 3 tokens on a card, a
`.many-counters` class is applied. This class ensures that when there
are 4 or more tokens that they bunch up into a square, rather than two
unequal rows/columns.

* Collapse counter styling into the base class.

--- a/less/cards.less
+++ b/less/cards.less
@@ -132,9 +132,26 @@
   right: 0;
   justify-content: center;
   display: flex;
-  flex-direction: column;
+  align-content: center;
   align-items: center;
+  flex-wrap: wrap;
   z-index: @layer-cards + 1;
+}
+
+.card.vertical .counters {
+  flex-direction: column;
+
+  &.many-counters {
+    flex-direction: row;
+  }
+}
+
+.card.horizontal .counters {
+  flex-direction: row;
+
+  &.many-counters {
+    flex-direction: column;
+  }
 }
 
 .counter {
@@ -145,41 +162,29 @@
   line-height: 24px;
   text-align: center;
   margin: 2px;
+  text-shadow: 1px 1px 2px #000;
+  border-radius: 4px;
+  color: white;
 }
 
 .dupe {
   background-color: rgba(0,128,0,0.85);
-  text-shadow: 1px 1px 2px #000;
-  border-radius: 4px;
-  color: white;
 }
 
 .power {
   background-color: rgba(0,0,128,0.85);
-  text-shadow: 1px 1px 2px #000;
-  border-radius: 4px;
-  color: white;
 }
 
 .strength {
   background-color: rgba(128,0,0,0.85);
-  text-shadow: 1px 1px 2px #000;
-  border-radius: 4px;
-  color: white;
 }
 
 .stand {
   background-color: rgba(128,128,128,0.85);
-  text-shadow: 1px 1px 2px #000;
-  border-radius: 4px;
-  color: white;
 }
 
 .poison {
   background-color: rgba(43,43, 0, 0.85);
-  text-shadow: 1px 1px 2px #000;
-  border-radius: 4px;
-  color: white;
 }
 
 .plot-selected {
